Revision history for Dinotrace

The contributors that suggested a given feature are shown in [].

* Dinotrace 9.4f 2019/10/26

****	Minor cleanups for github repository.

* Dinotrace 9.4e 2016/11/24

****	Fix clang compiler warnings.

* Dinotrace 9.4d 2014/09/12

****	Fix compiler warnings.

* Dinotrace 9.4c 2011/09/12

****	Fix message trashing stack and make cppcheck clean.  [David Binderman]

* Dinotrace 9.4b 2010/01/12

****	Fix core dump when no hostname in /etc/hosts.  [Chitlesh Goorah]

* Dinotrace 9.4a 2009/04/03

**	Dinotrace is now distributed under GPL v3 (previously GPL 2).

****	Fix Emacs 22 warnings on dinotrace.el/sim-log.el.  [Chitlesh Goorah]

****	Fix core dump on start on Fedora, fedora478749. [Manuel Wolfshant]

* Dinotrace 9.3f 2008/02/19

****	Fix signal radix being lost when trace is reread.  [Uwe Bonnes]

****	Fix core dump when verilog trace has single timestamp.  [Uwe Bonnes]

* Dinotrace 9.3e 2007/02/27

****	Add DESTDIR "make install" rule for RPMs.  [Werner Hoch]

* Dinotrace 9.3d 2007/02/27

****	Fix "make uninstall" deleting data area (Sorry!!!).  [Dinesh]

* Dinotrace 9.3c 2007/01/02

***	Add signed decimal radix.  [by Uwe Bonnes]

***	Builds now take place in "obj_dir" to keep them distinct from sources.

****	Fix VCD files with 10 or 100 femtosecond resolution.

****	Fix dinotrace.el complaint about bad verilog-mode.el version.
	[Joseph Holtgrefe]

****	Fix core dump when no fonts are available.  [Dmitri Belimov]

* Dinotrace 9.3b 2006/03/13

***	Fix line number incrementing in Verilog errors. [Uwe Bonnes]

* Dinotrace 9.3a 2005/06/13

***	Fix too small buttons under openmotif.

***	Fix missing keyboard accelerators under openmotif.

* Dinotrace 9.2b 2005/05/03

***	The default extension for Verilog dumps is now .vcd instead of .dmp.

****    Fix traces containing only real numbers.  [Vitor Antunes]

****	Fix segfault when doing signal adds.  [Guy Hutchinson]

* Dinotrace 9.2a 2004/12/20

**      NEWS file is now renamed Changes.
