@@ -19,8 +19,8 @@
 @c prefix arg).  This updates the node pointers, which texinfmt.el needs.
 @c Also update the master menu, created with texinfo-master-menu
 
-@set VERSION 9.4f
-@set UPDATED October 2019
+@set VERSION 9.4g
+@set UPDATED March 2021
 @set ID @value{VERSION}
 
 @c DESCRIPTION: TexInfo: DOCUMENT source run through texinfo to produce documentation file
