@@ -2,6 +2,10 @@ Revision history for Dinotrace
 
 The contributors that suggested a given feature are shown in [].
 
+* Dinotrace 9.4g 2021/03/10
+
+****	Fix possible string overflow bugs.
+
 * Dinotrace 9.4f 2019/10/26
 
 ****	Minor cleanups for github repository.
